<resources>
    <string name="app_name">Funetics</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_start">Start</string>
    <string name="dialog_annuleer">Annuleren</string>
    <string name="dialog_kies_kind">Kies een kind</string>
    <string name="dialog_kies_klas">Kies een klas</string>
    <string name="errordialog_message">FOUT: Gelieve eerst een kind te selecteren!</string>
    <string name="errordialog_message2">FOUT: Gelieve eerst een klas te selecteren!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />


    <!-- Example settings for Notifications -->
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="duikbril">DUIKBRIL</string>
    <string name="opnieuw">Opnieuw</string>

    <!-- Content_main -->
    <string name="volgende">Volgende</string>
    <string name="beheren">Beheren</string>
    <string name="selectKlas">Selecteer klas</string>
    <string name="selectGroep">Selecteer groep</string>
    <string name="selectKind">Selecteer kind</string>
    <string name="homeImage">Home afbeelding</string>

    <!-- Content_beheren -->
    <string name="title_activity_beheren">Beheren</string>
    <string name="klasTitle">Klassen</string>
    <string name="groepTitle">Groepen</string>
    <string name="kinderenTitle">Kinderen</string>
    <string name="detailTitle">Details</string>
    <string name="beherenTerugBtn">Terug</string>
    <string name="voornaam">Voornaam</string>
    <string name="naam">Naam</string>
    <string name="klas">Klas</string>
    <string name="groep">Groep</string>
    <string name="actief">Is actief</string>
    <string name="actiefExplain">Zet een persoon inactief als diegene geen tests meer zal doen maar waarvan je de gegevens nog wilt bewaren</string>
    <string name="wijzigbtn">Wijzigen</string>
    <string name="toevoegenbtn">Toevoegen</string>
    <string name="verwijderbtn">Verwijderen</string>

    <!-- Content_detail_kind -->
    <string name="title_activity_detail_kind">Details</string>
    <string name="testen">Vorige testen</string>
    <string name="fout">Fout bij laden van gegevens</string>
    <string name="startTest">Start nieuwe test</string>

    <!-- Content_test -->
    <string name="title_activity_test">Voormeting</string>

    <!-- Content_preteaching -->
    <string name="title_activity_preteaching">Preteaching</string>

    <!-- Content_oef1 -->
    <string name="title_activity_oef1">Oefening 1 : Definitie</string>

    <!-- Content_oef2 -->
    <string name="title_activity_oef2">Oefening 2 : Herhalen</string>

    <!-- Content_oef3 -->
    <string name="title_activity_oef3">Oefening 3 : Context</string>

    <!-- Content_oef4 -->
    <string name="title_activity_oef4">Oefening 4 : Connectie</string>

    <!-- Content_oef5 -->
    <string name="title_activity_oef5">Oefening 5 : 1 woord 3 foto\'s</string>

    <!-- Content_oef6 -->
    <string name="title_activity_oef6">Oefening 6 : Conditie training</string>
    <string name="title_activity_tobedeletete">tobedeletete</string>
    <string name="title_activity_voormeting">VoormetingActivity</string>
    <string name="title_activity_nameting">NametingActivity</string>


    <string name="draggable_text">Draggable Text</string>
    <string name="draggable_button">Draggable Button</string>
    <string name="title_activity_oef6_1">Oef6.1: Gevoel bij woord</string>
    <string name="title_activity_oef6_2">Oef6.2: Woord zoemen</string>
    <string name="title_activity_oef6_3">Oef6.3: Lettergrepen</string>
    <string name="title_activity_beheren_klassen">BeherenKlassenActivity</string>
</resources>
