<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BeherenKlassenActivity"
    tools:showIn="@layout/activity_beheren_klassen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/beherenTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:background="@color/color_primary_dark"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/klassenTitle"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textViewKlassenTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/klasTitle"
                    style="@style/title_white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/KlasDetailTitle"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textViewdetailTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailTitle"
                    style="@style/title_white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/kindDetailfTitle"
                android:layout_width="0dp"
                android:layout_weight="0.20"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="end|center_vertical"
                android:padding="0dp">

                <Button
                    android:id="@+id/buttonTerug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goTerug_onClick"
                    android:text="@string/beherenTerugBtn"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/beherenview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/klassenLijst"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="match_parent"
                android:background="@color/color_orange"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listViewKlassen"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <ScrollView
                android:layout_width="0dp"
                android:layout_weight="0.70"
                android:layout_height="match_parent"
                android:background="@color/color_grey">



                <LinearLayout
                    android:id="@+id/klasDetailVenster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/naamLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/naam" />

                    <EditText
                        android:id="@+id/naamInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ems="10"
                        android:hint="@string/naam"
                        android:inputType="textPersonName"
                        tools:ignore="Autofill" />


                    <Button
                        android:id="@+id/kinderenBeherenButton"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginBottom="20dp"
                        android:onClick="kinderenBeheren_onClick"
                        android:text="Kinderen beheren" />


                    <Button
                        android:id="@+id/wijzigButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:onClick="klasWijzigen_onClick"
                        android:text="@string/wijzigbtn" />

                    <Button
                        android:id="@+id/toevoegenButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:onClick="klasToevoegen_onClick"
                        android:text="@string/toevoegenbtn" />

                    <Button
                        android:id="@+id/verwijderButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:layout_marginBottom="5dp"
                        android:onClick="klasVerwijderen_onClick"
                        android:text="@string/verwijderbtn" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>