<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailTestActivity"
    tools:showIn="@layout/activity_detail_test">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/detailTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:background="@color/color_primary_dark">

            <LinearLayout
                android:id="@+id/detailTitle"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textViewDetailTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailTitle"
                    style="@style/title_white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/overzichtTitle"
                android:layout_width="0dp"
                android:layout_weight="0.30"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textViewOverzichtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Overzicht"
                    style="@style/title_white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.20"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="end|center_vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/buttonTerug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beherenTerugBtn"
                    android:onClick="goTerug_onClick"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ScrollView
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:background="@color/color_orange"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Naam:"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/kindTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fout"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Groep:"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/groepTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fout"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Datum:"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/datumTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fout"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Uur:"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/uurTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fout"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Conditie:"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/conditieTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fout"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/buttonHervat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:padding="25dp"
                        android:text="Test Hervatten" />

                    <Button
                        android:id="@+id/buttonDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:padding="25dp"
                        android:onClick="buttonDelete_onClick"
                        android:text="Verwijder deze test" />




                </LinearLayout>
            </ScrollView>
            <ListView
                android:id="@+id/listViewGetesteWoorden"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:background="@color/color_primary_light"
                android:scrollbars="vertical" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>